--- a/Homework3/trdli/package.json
+++ b/Homework3/trdli/package.json
@@ -12,6 +12,7 @@
     "@types/d3": "^7.4.3",
     "axios": "^1.2.1",
     "d3": "^7.8.0",
+    "d3-sankey": "^0.12.3",
     "lodash": "^4.17.21",
     "vite": "^4.3.9"
   }
